@@ -1,3 +1,6 @@
+2174.	[bug]		I/O errors should always be fatal when reading
+			master files. [RT #16825]
+
 2173.	[port]		win32: When compiling with MSVS 2005 SP1 we also
 			need to ship Microsoft.VC80.MFCLOC.
 
